--- a/rss/index.html
+++ b/rss/index.html
@@ -1,2 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0"><channel><title><![CDATA[Blogio]]></title><description><![CDATA[Hand crafted blogs! ]]></description><link>http://my-ghost-blog.com/</link><generator>Ghost v0.4.1</generator><lastBuildDate>Sun, 16 Feb 2014 18:59:03 GMT</lastBuildDate><atom:link href="http://my-ghost-blog.com/rss/" rel="self" type="application/rss+xml"/><author><![CDATA[bharathy89]]></author><ttl>60</ttl><item><title><![CDATA[Blog!]]></title><description><![CDATA[<p>Well this is my third attempt towards blogging. I am amazed by the power of node.js and ghost thats running on it. So I wanted to give blogging another shot and I love the interface that ghost provides for a blogger. So lets see how far my blogging journey goes.</p>]]></description><link>http://my-ghost-blog.com/blog/</link><guid isPermaLink="false">e99d5ce9-a091-44bd-a76b-80853ab4992d</guid><dc:creator><![CDATA[bharathy89]]></dc:creator><pubDate>Sun, 16 Feb 2014 18:04:32 GMT</pubDate></item></channel></rss>
+<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0"><channel><title><![CDATA[Blogio]]></title><description><![CDATA[Hand crafted blogs! ]]></description><link>http://my-ghost-blog.com/</link><generator>Ghost v0.4.1</generator><lastBuildDate>Sun, 16 Feb 2014 19:43:47 GMT</lastBuildDate><atom:link href="http://my-ghost-blog.com/rss/" rel="self" type="application/rss+xml"/><author><![CDATA[bharathy89]]></author><ttl>60</ttl><item><title><![CDATA[Project - PageRank]]></title><description><![CDATA[<p>PageRank is what powers the google search. </p>
+
+<p>Fun Fact : We think page in pagerank refers to web pages but its not it is Page as in Larry Page, CEO of Google.</p>
+
+<p>Pagerank is like finding the most the popular web page among its peers and present it to the user as the most relevant page. This popularity is calculated by the hyper links. The formula for calculating page rank is </p>
+
+<p><strong>PR(A) = (1-d)/N + d( sum of all( PR(I)/NO(I)))</strong></p>
+
+<p>where <br />
+<strong>A</strong> - It is the page for that we want to calculate page rank for.</p>
+
+<p><strong>d</strong> - 0.85 dampening factor. ( There is lot of research that went into calculating this value which cannot be covered here. So do your own research on this. The only thing I can mention here is this value causes the pagerank values for any A to converge as the number of iterations increases)</p>
+
+<p><strong>N</strong> - Total number of pages for which you want to calculate pagerank.</p>
+
+<p><strong>I</strong> - is the inlink page for A i.e you can reach A with a hyper link from I.</p>
+
+<p><strong>NO(I)</strong> - number of outlinks from I i.e. number of hyper links present on I.</p>
+
+<p>For more information I would suggest you to look it up on <a href='http://en.wikipedia.org/wiki/PageRank' >wiki</a>. </p>
+
+<p>So for my project I took the wiki dumps and calculated the page rank.</p>
+
+<p>The code can be found at <a href='https://github.com/bharathy89/PageRank' >github</a></p>
+
+<p>have fun!</p>]]></description><link>http://my-ghost-blog.com/project-pagerank/</link><guid isPermaLink="false">39539650-be74-44d5-8e02-d678c0d53be0</guid><dc:creator><![CDATA[bharathy89]]></dc:creator><pubDate>Sun, 16 Feb 2014 19:27:58 GMT</pubDate></item><item><title><![CDATA[Blog!]]></title><description><![CDATA[<p>Well this is my third attempt towards blogging. I am amazed by the power of node.js and ghost thats running on it. So I wanted to give blogging another shot and I love the interface that ghost provides for a blogger. So lets see how far my blogging journey goes.</p>]]></description><link>http://my-ghost-blog.com/blog/</link><guid isPermaLink="false">e99d5ce9-a091-44bd-a76b-80853ab4992d</guid><dc:creator><![CDATA[bharathy89]]></dc:creator><pubDate>Sun, 16 Feb 2014 18:04:32 GMT</pubDate></item></channel></rss>
