--- a/rss/index.html
+++ b/rss/index.html
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0"><channel><title><![CDATA[Blogio]]></title><description><![CDATA[Hand crafted blogs! ]]></description><link>http://bharathy89.github.io/</link><generator>Ghost v0.4.1</generator><lastBuildDate>Sun, 16 Feb 2014 23:11:47 GMT</lastBuildDate><atom:link href="http://bharathy89.github.io/rss/" rel="self" type="application/rss+xml"/><author><![CDATA[bharathy89]]></author><ttl>60</ttl><item><title><![CDATA[Project - PageRank]]></title><description><![CDATA[<p>PageRank is what powers the google search. </p>
-
-<p>Fun Fact : We think page in pagerank refers to web pages but its not it is Page as in Larry Page, CEO of Google.</p>
+<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0"><channel><title><![CDATA[Blogio]]></title><description><![CDATA[Hand crafted blogs! ]]></description><link>http://bharathy89.github.io/</link><generator>Ghost v0.4.1</generator><lastBuildDate>Sun, 16 Feb 2014 23:17:09 GMT</lastBuildDate><atom:link href="http://bharathy89.github.io/rss/" rel="self" type="application/rss+xml"/><author><![CDATA[bharathy89]]></author><ttl>60</ttl><item><title><![CDATA[Project - PageRank]]></title><description><![CDATA[<p>PageRank is what powers the google search.  </p>
 
 <p>Pagerank is like finding the most the popular web page among its peers and present it to the user as the most relevant page. This popularity is calculated by the hyper links. The formula for calculating page rank is </p>
 
@@ -24,7 +22,9 @@
 
 <p>The code can be found at <a href='https://github.com/bharathy89/PageRank' >github</a></p>
 
-<p>have fun!</p>]]></description><link>http://bharathy89.github.io/2014/02/16/project-pagerank/</link><guid isPermaLink="false">39539650-be74-44d5-8e02-d678c0d53be0</guid><dc:creator><![CDATA[bharathy89]]></dc:creator><pubDate>Sun, 16 Feb 2014 19:27:58 GMT</pubDate></item><item><title><![CDATA[Ghost Blog!]]></title><description><![CDATA[<p>Well this is my third attempt to blogging. I am so in love with <a href='http://nodejs.org/' >node.js</a> and <a href='https://ghost.org/' >Ghost Blog</a> powered by it. So I wanted to give blogging another shot. Lets see how far my blogging journey goes. </p>
+<p><strong>Trivia :</strong> We think page in pagerank refers to web pages but its not. It's Page as in Larry Page, CEO of Google.</p>
+
+<p>have fun! <strong>:D</strong></p>]]></description><link>http://bharathy89.github.io/2014/02/16/project-pagerank/</link><guid isPermaLink="false">39539650-be74-44d5-8e02-d678c0d53be0</guid><dc:creator><![CDATA[bharathy89]]></dc:creator><pubDate>Sun, 16 Feb 2014 19:27:58 GMT</pubDate></item><item><title><![CDATA[Ghost Blog!]]></title><description><![CDATA[<p>Well this is my third attempt to blogging. I am so in love with <a href='http://nodejs.org/' >node.js</a> and <a href='https://ghost.org/' >Ghost Blog</a> powered by it. So I wanted to give blogging another shot. Lets see how far my blogging journey goes. </p>
 
 <p>I will soon be adding a post on how to set up <a href='https://ghost.org/' >Ghost Blog</a> on github.</p>
 
