--- a/rss/index.html
+++ b/rss/index.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0"><channel><title><![CDATA[Blogio]]></title><description><![CDATA[Hand crafted blogs! ]]></description><link>http://bharathy89.github.io/</link><generator>Ghost v0.4.1</generator><lastBuildDate>Sun, 16 Feb 2014 23:17:09 GMT</lastBuildDate><atom:link href="http://bharathy89.github.io/rss/" rel="self" type="application/rss+xml"/><author><![CDATA[bharathy89]]></author><ttl>60</ttl><item><title><![CDATA[Project - PageRank]]></title><description><![CDATA[<p>PageRank is what powers the google search.  </p>
+<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0"><channel><title><![CDATA[Blogio]]></title><description><![CDATA[Hand crafted blogs! ]]></description><link>http://bharathy89.github.io/</link><generator>Ghost v0.4.1</generator><lastBuildDate>Sun, 16 Feb 2014 23:19:51 GMT</lastBuildDate><atom:link href="http://bharathy89.github.io/rss/" rel="self" type="application/rss+xml"/><author><![CDATA[bharathy89]]></author><ttl>60</ttl><item><title><![CDATA[Project - PageRank]]></title><description><![CDATA[<p>PageRank is what powers the google search.  </p>
 
-<p>Pagerank is like finding the most the popular web page among its peers and present it to the user as the most relevant page. This popularity is calculated by the hyper links. The formula for calculating page rank is </p>
+<p>Pagerank is like finding the most popular web page among its peers and present it to the user as the most relevant page. This popularity is calculated by the hyper links. The formula for calculating page rank is </p>
 
 <p><strong>PR(A) = (1-d)/N + d( sum of all( PR(I)/NO(I)))</strong></p>
 
