--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0"><channel><title><![CDATA[Blogio]]></title><description><![CDATA[Hand crafted blogs! ]]></description><link>http://bharathy89.github.io/</link><generator>Ghost v0.4.1</generator><lastBuildDate>Tue, 18 Feb 2014 05:20:01 GMT</lastBuildDate><atom:link href="http://bharathy89.github.io/rss/" rel="self" type="application/rss+xml"/><author><![CDATA[bharathy89]]></author><ttl>60</ttl><item><title><![CDATA[Project - Circle Icons!]]></title><description><![CDATA[<p>I had a good day today! I got my hands dirty doing vector art its fun and I love it. These are some of the icons I could make really fast. Its so easy if you are using the right tools. I am using a trial version of sketch app for mac. I generally look for open source alternatives but I thought Ill give this a try and its addictive.</p>
+<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0"><channel><title><![CDATA[Blogio]]></title><description><![CDATA[Hand crafted blogs! ]]></description><link>http://bharathy89.github.io/</link><generator>Ghost v0.4.1</generator><lastBuildDate>Wed, 26 Feb 2014 23:19:57 GMT</lastBuildDate><atom:link href="http://bharathy89.github.io/rss/" rel="self" type="application/rss+xml"/><author><![CDATA[bharathy89]]></author><ttl>60</ttl><item><title><![CDATA[Project - FizzBuzz]]></title><description><![CDATA[<p>Hello! Its been sometime since I wrote by blog. It has been a hectic week. I went to Hoggetowne hackathon came in second which is awesome. I got to meet some pretty good developers there. </p>
+
+<p>Anyways Today I found something interesting ever heard of FizzBuzz its ridiculous. Its kind of a simple hack to find weak programmers. The text goes like this :</p>
+
+<p><strong>Write a program that prints the numbers from 1 to 100. But for multiples of three print "Fizz" instead of the number and for the multiples of five print "Buzz". For numbers which are multiples of both three and five print "FizzBuzz".</strong></p>
+
+<p>Thats weird anyone can do it...right? nope, some say its like a pre-screen for anyone who is a weak programmer. Check this <a href='http://imranontech.com/2007/01/24/using-fizzbuzz-to-find-developers-who-grok-coding/' >blog</a>. I didn't want to be one of "those guys" :P </p>
+
+<p>So I wrote the code and It made feel like a programmer again "one step above a sucky one atleast I think"....</p>
+
+<p>Anyways heres the code :</p>
+
+<pre><code>public static void main(String args[]) {
+    for(int i=1; i&lt; 101; i++) {
+        if(i%3==0 &amp;&amp; i%5==0) {
+            System.out.print("FizzBuzz  ");
+        } else if(i%3==0) {
+            System.out.print("Fizz  ");
+        } else if(i%5==0) {
+            System.out.print("Buzz  ");
+        }else {
+            System.out.print(""+i+" ");
+        }       
+    }
+}
+</code></pre>
+
+<p>Now I know you can improve the if conditions and make it more optimized....But ahhhh! I feel lazy!...</p>
+
+<p>Its fun writing about silly but important stuff though!...... </p>]]></description><link>http://bharathy89.github.io/2014/02/26/project-fizzbuzz/</link><guid isPermaLink="false">08917ad6-1089-48c2-9beb-39a2f719ef26</guid><dc:creator><![CDATA[bharathy89]]></dc:creator><pubDate>Wed, 26 Feb 2014 23:18:24 GMT</pubDate></item><item><title><![CDATA[Project - Circle Icons!]]></title><description><![CDATA[<p>I had a good day today! I got my hands dirty doing vector art its fun and I love it. These are some of the icons I could make really fast. Its so easy if you are using the right tools. I am using a trial version of sketch app for mac. I generally look for open source alternatives but I thought Ill give this a try and its addictive.</p>
 
 <p><img src='http://bharathy89.github.io/content/images/2014/Feb/icons.png'  alt="icons" /></p>
 
