--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0"><channel><title><![CDATA[Blogio]]></title><description><![CDATA[Hand crafted blogs! ]]></description><link>http://bharathy89.github.io/</link><generator>Ghost v0.4.1</generator><lastBuildDate>Tue, 25 Mar 2014 03:19:35 GMT</lastBuildDate><atom:link href="http://bharathy89.github.io/rss/" rel="self" type="application/rss+xml"/><author><![CDATA[bharathy89]]></author><ttl>60</ttl><item><title><![CDATA[Project - Sudoku Solver brute force method]]></title><description><![CDATA[<p>My version of bruteforce sudoku solver :</p>
+<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0"><channel><title><![CDATA[Blogio]]></title><description><![CDATA[Hand crafted blogs! ]]></description><link>http://bharathy89.github.io/</link><generator>Ghost v0.4.1</generator><lastBuildDate>Tue, 25 Mar 2014 03:32:38 GMT</lastBuildDate><atom:link href="http://bharathy89.github.io/rss/" rel="self" type="application/rss+xml"/><author><![CDATA[bharathy89]]></author><ttl>60</ttl><item><title><![CDATA[Project - Sudoku Solver (brute force)]]></title><description><![CDATA[<p>I started brushing up my basics for interviews.. <br />
+I am writing more and more algorithms on paper (white board) and testing it. <br />
+what's more fun than writing a program to solve sudoku. So heres my version of (bruteforce) <strong>Sudoku Solver</strong>.</p>
 
 <pre><code>boolean solveSudoku(int[][] sudokumatrix) { 
     boolean solved = false;
